Date	Added
11/08
	* Attempted to fix the mob bug (still haven't :( ). Still updated mob.c/clif.c/chrif.c according to jA 1057. [Codemaster]
	* Fixed item_cardalbum.txt: Removed extra column which mad all albums empty [Lupus]
11/07
	* clif.c: Added a few things from jAthena 1057 [Codemaster]
	* Corrected some typos in item_db. Items 1143 and 1719 need to be re-checked.[kobra_k88]
	* Fixed compiling error in Map Server in which @repairall was using old broken system [Shinigami]

11/06
	- Fixed wrong coords for payon guild flags (it has the old map coords), fixed some weapon effects in item_db,
	 updated the mob_db (90%+ done), added EP 5-9 mobs to mob_branch.txt and EP 6 cards to item_cardalbum.txt[shadowlady]
	* atcommand.c/.h,chrif.c/.h, added @changesex. [MC Cameri]
	* mob.c & clif.c: Added & Modified a few parts dealing with monsters and guilds [Codemaster]
	* mob.c: Re-did a few parts according to jA's 1057 version. [Codemaster]
11/05
	* Fixed and redo optional Umbalian quests:
	- Wise Man Fabius' Umbalian Language Quest (you can learn Umbalian language in
	  alternative way)
	- On speaking with Umbalian Chief about meaning of masks you activate Turban Thief Quest
	  (For Sphinx Mask)
	* Fixed several bugs in Niflheim Piano Keys Quest (wrong variable name, missing CLOSE buttons)
	  Zeny/Item Exploit in Niflhein Sairin NPC quest (should add similiar checks in every
	  easy quests with expensive prizes to avoid exploits) [Lupus]
	* Revised and fixed all comodo,yuno,amatsu,gonryun,umbala mobs and drops. Also fixed mvp and woe mobs too [Shadowlady]
	* Fixed crash from guild skill point allocation, there seems to be a problem with guilds loading still. [Valaris]
	* Fixed committed typo in map_athena.conf, remove aria's dev npc (was giving errors preventing server startup). [Valaris]

11/04
	* Added sara-chan's packet db with support for 11-1 [Valaris]